@@ -66,11 +66,14 @@
       working version of your application developed as an Eclipse project.<br>
     </div>
     <div class="wiki" style="display: block;">If you do not have Eclipse yet <a
-        href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-09/R/eclipse-java-2019-09-R-win32-x86_64.zip"
-        target="_blank">download Eclipse for Windows</a>, <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-09/R/eclipse-java-2019-09-R-macosx-cocoa-x86_64.dmg"
-        target="_blank">for Mac</a> or <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-09/R/eclipse-java-2019-09-R-linux-gtk-x86_64.tar.gz"
+        href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-12/R/eclipse-java-2019-12-R-win32-x86_64.zip"
+        target="_blank">download Eclipse for Windows</a>, <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-12/R/eclipse-java-2019-12-R-macosx-cocoa-x86_64.dmg"
+        target="_blank">for Mac</a> or <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-12/R/eclipse-java-2019-12-R-linux-gtk-x86_64.tar.gz"
         target="_blank">for Linux</a>. If you don't have Java <a href="https://www.java.com"
-        target="_blank">download it from java.com</a>. <br>
+        target="_blank">download it from java.com</a>. If you use a 32 bits
+      computer <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-win32.zip"
+        target="_blank">download Eclipse 2018-09 for Windows 32</a> or <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-linux-gtk.tar.gz"
+        target="_blank">for Linux 32</a>.
       <h3 id="toc3"><a name="Lesson 1: Getting started-Creating the project in Eclipse-Installing OpenXava"></a>Installing
         OpenXava</h3>
       Go to <a href="http://www.openxava.org">www.openxava.org</a> and download
