@@ -29,12 +29,9 @@
             la aplicación</a></div>
         <div style="margin-left: 2em;"><a href="#Resumen">Resumen</a></div>
       </div>
-      <strong>Curso</strong>: <strong>1. Primeros pasos</strong> | <a class="wiki_link"
-
-        href="modeling_es.html">2. Modelar con Java</a> | <a class="wiki_link"
-
-        href="testing_es.html">3. Pruebas automáticas</a> | <a class="wiki_link"
-
+      <strong>Curso</strong>: <strong>1. Primeros pasos</strong> | <a class="wiki_link"
+        href="modeling_es.html">2. Modelar con Java</a> | <a class="wiki_link"
+        href="testing_es.html">3. Pruebas automáticas</a> | <a class="wiki_link"
         href="inheritance_es.html">4. Herencia</a> | <a class="wiki_link" href="basic-business-logic_es.html">5.
         Lógica de negocio básica</a> | <a class="wiki_link" href="validation_es.html">6.
         Validación avanzada</a> | <a class="wiki_link" href="refining-standard-behavior_es.html">7.
@@ -67,23 +64,21 @@
       facturación usando Eclipse. Al final de este capítulo tendrás una primera
       versión funcional de tu aplicación desarrollada como un proyecto de
       Eclipse.<br>
-      Si todavía no tienes Eclipse <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-09/R/eclipse-java-2019-09-R-win32-x86_64.zip"
-
-        target="_blank">descarga Eclipse para Windows</a>, <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-09/R/eclipse-java-2019-09-R-macosx-cocoa-x86_64.dmg"
-
-        target="_blank">para Mac</a> o <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-09/R/eclipse-java-2019-09-R-linux-gtk-x86_64.tar.gz"
-
-        target="_blank">para Linux</a>. Si no tienes Java <a href="https://www.java.com"
-
-        target="_blank">descárgalo de java.com</a>.<br>
+      Si todavía no tienes Eclipse <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-12/R/eclipse-java-2019-12-R-win32-x86_64.zip"
+        target="_blank">descarga Eclipse para Windows</a>, <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-12/R/eclipse-java-2019-12-R-macosx-cocoa-x86_64.dmg"
+        target="_blank">para Mac</a> o <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2019-12/R/eclipse-java-2019-12-R-linux-gtk-x86_64.tar.gz"
+        target="_blank">para Linux</a>. Si no tienes Java <a href="https://www.java.com"
+        target="_blank">descárgalo de java.com</a>. Si usas una máquina de 32
+      bits descarga el <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-win32.zip"
+        target="_blank">Eclipse 2018-09 para Windows 32</a> o <a href="https://www.eclipse.org/downloads/download.php?file=/technology/epp/downloads/release/2018-09/R/eclipse-java-2018-09-linux-gtk.tar.gz"
+        target="_blank">para Linux 32</a>.<br>
       <h3 id="toc3"><a name="Crear-el-proyecto-en-Eclipse-Instalar-OpenXava"></a>Instalar
         OpenXava</h3>
-      Ve a <a href="http://www.openxava.org">www.openxava.org</a>
-      y descarga la última distribución de OpenXava. Es un archivo zip, algo así
-      como <em>openxava-6.x.zip</em>. Simplemente descomprímelo y tendrás un
-      entorno listo para empezar a desarrollar. Algo como esto:<br>
-      <img src="files/getting-started_es010.png" alt="getting-started_es010.png"
-
+      Ve a <a href="http://www.openxava.org">www.openxava.org</a> y descarga la
+      última distribución de OpenXava. Es un archivo zip, algo así como <em>openxava-6.x.zip</em>.
+      Simplemente descomprímelo y tendrás un entorno listo para empezar a
+      desarrollar. Algo como esto:<br>
+      <img src="files/getting-started_es010.png" alt="getting-started_es010.png"
         title="getting-started_es010.png"><br>
       Como ves, las distribución de OpenXava incluye un workspace de Eclipse
       configurado y listo para usar. Empecemos a trabajar.<br>
@@ -94,13 +89,11 @@
           Switch Workspace</span></em><span style="line-height: 1.5;">):</span><br>
       <img src="files/quick-start_es010.png" alt="quick-start_es010.png" title="quick-start_es010.png"><br>
       En primer lugar has de crear un proyecto Java nuevo:<br>
-      <img src="files/getting-started_es020.png" alt="getting-started_es020.png"
-
+      <img src="files/getting-started_es020.png" alt="getting-started_es020.png"
         title="getting-started_es020.png"><br>
       Entonces aparecerá un asistente. Teclea el nombre del proyecto, <em>Facturacion</em>
       y presiona en Finish:<br>
-      <img src="files/getting-started_es030.png" alt="getting-started_es030.png"
-
+      <img src="files/getting-started_es030.png" alt="getting-started_es030.png"
         title="getting-started_es030.png"><br>
       Ten cuidado de poner la <em>F</em> de <em>Facturacion</em> en mayúscula
       y no usar acento, para que los vínculos de abajo funcionen correctamente.</div>
@@ -110,22 +103,18 @@
     <div class="wiki" style="display: block;">Pulsa <i>Don't Create</i>.</div>
     <div class="wiki" style="display: block;">Después de esto tendrás un
       proyecto Java vacío llamado <em>Facturacion</em>:<br>
-      <img src="files/getting-started_es040.png" alt="getting-started_es040.png"
-
+      <img src="files/getting-started_es040.png" alt="getting-started_es040.png"
         title="getting-started_es040.png"><br>
       Ahora tienes que convertirlo en un proyecto OpenXava:<br>
-      <img src="files/getting-started_es050.png" alt="getting-started_es050.png"
-
+      <img src="files/getting-started_es050.png" alt="getting-started_es050.png"
         title="getting-started_es050.png"><br>
       Después de esto has de introducir el nombre de proyecto, teclea <em>Facturacion</em>
       y presiona OK:<br>
-      <img src="files/getting-started_es060.png" alt="getting-started_es060.png"
-
+      <img src="files/getting-started_es060.png" alt="getting-started_es060.png"
         title="getting-started_es060.png"><br>
       Espera unos pocos segundos hasta que termine y tendrás un proyecto
       OpenXava completo:<br>
-      <img src="files/getting-started_es065.png" alt="getting-started_es065.png"
-
+      <img src="files/getting-started_es065.png" alt="getting-started_es065.png"
         title="getting-started_es065.png"><br>
       Tu proyecto ya está listo para empezar a escribir código.<br>
       <h2 id="toc9"><a name="Crear-tu-primera-entidad"></a>Crear tu primera
@@ -135,12 +124,10 @@
       con solo <em>numero</em> y <em>descripcion</em>. </div>
     <div class="wiki" style="display: block;">Selecciona el paquete <em>com.tuempresa.facturacion.modelo</em>
       y pulsa el botón <em>New Java Class</em>:<br>
-      <img src="files/getting-started_es125.png" alt="getting-started_es125.png"
-
+      <img src="files/getting-started_es125.png" alt="getting-started_es125.png"
         title="getting-started_es125.png"><br>
       Después teclea <em>Cliente</em> como nombre de clase y pulsa <em>Finish</em>.<br>
-      <img src="files/getting-started_es130.png" alt="getting-started_es130.png"
-
+      <img src="files/getting-started_es130.png" alt="getting-started_es130.png"
         title="getting-started_es130.png"><br>
       Fíjate que la <em>C</em> de <em>Cliente</em> está en mayúscula, esto es
       muy importante, en Java todas las clases empiezan con mayúscula. Has
@@ -199,36 +186,30 @@ public class Cliente {
       <h2 id="toc10"><a name="Ejecutar-la-aplicacion"></a>Ejecutar la aplicación</h2>
       Lo primero es contruir el proyecto pulsando el botón <em>Build All</em> o
       presionando Ctrl-B:<br>
-      <img src="files/getting-started_es145.png" alt="getting-started_es145.png"
-
+      <img src="files/getting-started_es145.png" alt="getting-started_es145.png"
         title="getting-started_es145.png"><br>
       Pulsa el botón derecho del ratón en <i>_Run_Facturacion.java</i> (en <i>src/_run</i>)
       y selecciona <i>Run As &gt; Java Application</i>:<br>
-      <img src="files/getting-started_es150.png" alt="getting-started_es150.png"
-
+      <img src="files/getting-started_es150.png" alt="getting-started_es150.png"
         title="getting-started_es150.png"><br>
       Ya tienes tu aplicación ejecutándose. Para verla, abre tu navegador y ve a
       la URL:<br>
-      <a class="wiki_link_ext" href="http://localhost:8080/Facturacion" rel="nofollow"
-
+      <a class="wiki_link_ext" href="http://localhost:8080/Facturacion" rel="nofollow"
         target="_blank">http//:localhost:8080/Facturacion</a><br>
       Estás viendo tu aplicación por primera vez. Para empezar pulsa en el botón
       INICIAR SESIÓN:<br>
-      <img src="files/getting-started_es160.png" alt="getting-started_es160.png"
-
+      <img src="files/getting-started_es160.png" alt="getting-started_es160.png"
         title="getting-started_es160.png"></div>
     <div class="wiki" style="display: block;">Ahora, introduce admin/admin y
       pulsa en ENTRAR<em></em>:</div>
     <img src="files/getting-started_es165.png" alt="Página de identificación">
     <div class="wiki" style="display: block;"> Después, pulsa en la parte de la
       izquierda se mostrará una lista de módulos, escoge <em>Clientes</em>:<br>
-      <img src="files/getting-started_es170.png" alt="getting-started_es170.png"
-
+      <img src="files/getting-started_es170.png" alt="getting-started_es170.png"
         title="getting-started_es170.png"><br>
       Usa el módulo <em>Clientes</em> para crear nuevos clientes, simplemente
       introduce el número y el nombre y pulsa <em>Grabar</em>.<br>
-      <img src="files/getting-started_es190.png" alt="getting-started_es190.png"
-
+      <img src="files/getting-started_es190.png" alt="getting-started_es190.png"
         title="getting-started_es190.png"><br>
       Pulsa en <em>Lista</em> para ver los clientes que has creado.
       Enhorabuena, tienes tu entorno configurado y tu aplicación funcionando.<br>
@@ -274,12 +255,10 @@ public class Producto {
     <img src="files/getting-started_es195.png" alt="getting-started_es195.png" title="getting-started_es195.png">
     <div class="wiki" style="display: block;"> Para ver tu nueva entidad en
       acción abre tu navegador y ve a la URL:<br>
-      <a class="wiki_link_ext" href="http://localhost:8080/Facturacion/modules/Producto"
-
+      <a class="wiki_link_ext" href="http://localhost:8080/Facturacion/modules/Producto"
         rel="nofollow" target="_blank">http://localhost:8080/Facturacion/modules/Producto</a><br>
       Después de identificarte con admin/admin obtendrás:<br>
-      <img src="files/getting-started_es200.png" alt="getting-started_es200.png"
-
+      <img src="files/getting-started_es200.png" alt="getting-started_es200.png"
         title="getting-started_es200.png"><br>
       Sí, ya tienes un nuevo módulo en marcha, y solo has tenido que escribir
       una simple clase. Ahora puedes concentrarte en hacer crecer tu aplicación.<br>
@@ -296,23 +275,19 @@ public class Producto {
       considerar adquirir un poco de conocimiento base, tal como:<br>
       <ul>
         <li>Si eres nuevo en Java deberías leer un libro de introducción a Java
-          o leerte el <a class="wiki_link_ext" href="https://docs.oracle.com/javase/tutorial/"
-
+          o leerte el <a class="wiki_link_ext" href="https://docs.oracle.com/javase/tutorial/"
             rel="nofollow">Tutorial de Java</a>.</li>
-        <li>Si estás interesado en la filosofía y arquitectura de OpenXava <a class="wiki_link"
-
+        <li>Si estás interesado en la filosofía y arquitectura de OpenXava <a class="wiki_link"
             href="philosophy_es.html">lee el apéndice A</a> de este curso.</li>
         <li>Los apéndices B y C sobre <a class="wiki_link" href="jpa_es.html">Java
             Persistence API</a> y <a class="wiki_link" href="annotations_es.html">anotaciones</a>
           te serán de mucha utilidad.</li>
       </ul>
       <br>
-      <strong><a class="wiki_link_ext" href="https://sourceforge.net/projects/openxava/files/openxava-course-source-code/openxava-course-source-code-lesson-1-getting-started_es.zip/download"
-
+      <strong><a class="wiki_link_ext" href="https://sourceforge.net/projects/openxava/files/openxava-course-source-code/openxava-course-source-code-lesson-1-getting-started_es.zip/download"
           rel="nofollow">Descargar código fuente de esta lección</a></strong><br>
       <br>
-      <strong>¿Problemas con la lección? <a class="wiki_link_ext" href="http://sourceforge.net/p/openxava/discussion/437013/"
-
+      <strong>¿Problemas con la lección? <a class="wiki_link_ext" href="http://sourceforge.net/p/openxava/discussion/437013/"
           rel="nofollow">Pregunta en el foro</a></strong> <strong>¿Ha ido bien?
         <a class="wiki_link" href="modeling_es.html">Ve a la lección 2</a></strong>
     </div>
