@@ -1,0 +1,2 @@
+/*C2*/SET SCHEMA PUBLIC
+DISCONNECT
